clang/test/Frontend/verify2.h
#error header

#if 0
// expected-error {{should be ignored}}
#endif
